<resources>
    <string name="app_name">Practice test1</string>
    <string name="GalleryAction">Gallery</string>
    <string name="SeekAction">Seek</string>
    <string name="ImplicetAction">Implicet</string>
    <string name="MediaAction">Media</string>
    <string name="ContextAction">Context</string>
    <string name="ToatAcion">Toasts</string>
    <string name="Hide">Hide</string>
    <string name="Share">Share</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
